--- a/gc_style3.css
+++ b/gc_style3.css
@@ -66,23 +66,24 @@ body {
 }
 
 .get-recommendation-2 .text-container .input-table td:first-child {
-  width: 18%;
+  width: 30%;
 }
 
 .get-recommendation-2 .text-container .input-table td:nth-child(3) {
   padding-left: 40px;
+  width: 30%;
 }
 
 .get-recommendation-2 .text-container .input-table td.input-cell {
-  width: 35%;
+  width: 30%;
   padding-left: 5px;
 }
 
 .get-recommendation-2 .text-container .input-table input {
-  width: 100%;
+  width: 262px;
   box-sizing: border-box;
   padding: 15px 25px;
-  font-size: 18px;
+  font-size: 14px;
   background-color: #ffffff;
   border-radius: 50px;
   border: none;
@@ -93,7 +94,7 @@ body {
   .text-container
   .input-table
   td.input-cell
-  input:focus {
+  input.form-input:focus {
   outline: none;
 }
 
@@ -107,7 +108,7 @@ body {
 
 .get-recommendation-2 .text-container label {
   color: #8a8a8a;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 /*** Special Selection Input ***/
@@ -141,7 +142,7 @@ body {
   top: 50%;
   transform: translateY(-50%);
   pointer-events: none;
-  font-size: 18px;
+  font-size: 12px;
   z-index: 10;
 }
 
@@ -211,7 +212,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 18px;
+  font-size: 14px;
   width: 90%;
 }
 
@@ -225,13 +226,19 @@ body {
   position: absolute;
   background-color: #ffffff;
   top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 20px;
   z-index: 99;
-  width: 85%;
+  width: 220px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   font-family: "Abhaya Libre";
-  font-size: 18px;
+  font-size: 14px;
+  max-height: 165px;
+  overflow-y: scroll;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .get-recommendation-2
@@ -316,7 +323,6 @@ body {
   margin-bottom: 0;
   padding-bottom: 0;
 }
-
 
 .get-recommendation-2 .text-container .teaching-style-preference .label-box {
   background-color: #ffffff;
@@ -485,7 +491,7 @@ body {
   border-radius: 12px;
 }
 
-  .text-container
+.text-container
   .teaching-style-preference
   .checkbox-wrapper-23
   input
@@ -495,8 +501,7 @@ body {
   padding: 5%;
 }
 
-
-  .text-container
+.text-container
   .teaching-style-preference
   .checkbox-wrapper-23
   input
